force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Confirmation_Message__c</fullName>
    <description>To show a confirmation message popup when a question is responded, enter the confirmation message here. If the message is not specified (i.e. empty), the confirmation message will not be displayed.</description>
    <inlineHelpText>To show a confirmation message popup when a question is responded, enter the confirmation message here. If the message is not specified (i.e. empty), the confirmation message will not be displayed.</inlineHelpText>
    <label>Confirmation Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>