force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Confirmation_Ok_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Confirmation_Ok_Button_Label__c</fullName>
    <description>You can change the Ok button label for the confirmation popup.</description>
    <inlineHelpText>You can change the Ok button label for the confirmation popup.</inlineHelpText>
    <label>Confirmation Ok Button Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>