force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Consent_Statement__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Consent_Statement__c</fullName>
    <description>Consent statement text.</description>
    <inlineHelpText>Consent statement text.</inlineHelpText>
    <label>Consent Statement</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>