force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Controlling_Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Controlling_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Controlling question of this question.</description>
    <inlineHelpText>Controlling question of this question.</inlineHelpText>
    <label>Controlling Question</label>
    <referenceTo>ArdiraSurvey__Question__c</referenceTo>
    <relationshipLabel>Ardira Questions (Controlling Question)</relationshipLabel>
    <relationshipName>Ardira_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>