force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Correct_Answers__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Correct_Answers__c</fullName>
    <description>Correct answers for the question.</description>
    <inlineHelpText>Correct answers for the question.</inlineHelpText>
    <label>Correct Answers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>