force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Custom_Validation_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Custom_Validation_Class_Name__c</fullName>
    <description>Name of the class implementing SurveyResponseValidationInterface. When accepting a question response, this class method &apos;validateQuestionResponse&apos; will be invoked.</description>
    <inlineHelpText>To enable a customized validation for the question response, set a class name that implements SurveyResponseValidationInterface. When accepting a question response, the class method &apos;validateQuestionResponse&apos; will be invoked to validate the response.</inlineHelpText>
    <label>Custom Validation Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>