force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Date_Allowed_Dates__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Date_Allowed_Dates__c</fullName>
    <defaultValue>&quot;Any&quot;</defaultValue>
    <description>Type of validation to be performed on the date entered as a response to this question.</description>
    <inlineHelpText>Select dates to allow as a valid response for the question.</inlineHelpText>
    <label>Date Question - Allowed Dates</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Future Date Only</fullName>
            </value>
            <value>
                <fullName>Past Date Only</fullName>
            </value>
            <value>
                <fullName>Custom Date Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>