force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Decimal_Places__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of digits to the right of the decimal point.</description>
    <inlineHelpText>Number of digits to the right of the decimal point.</inlineHelpText>
    <label>Decimal Places</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>