force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Detractors__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Detractors__c</fullName>
    <defaultValue>&quot;#FF0000&quot;</defaultValue>
    <description>Color to be used for Detractors.</description>
    <inlineHelpText>Select a color to use for the detractors in the NPS question.</inlineHelpText>
    <label>Detractors (0-6)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>