force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Display_Label_at__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Display_Label_at__c</fullName>
    <defaultValue>&apos;Bottom&apos;</defaultValue>
    <description>Select label placement for question.</description>
    <inlineHelpText>Select label placement for question.</inlineHelpText>
    <label>Display Label at</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Bottom</fullName>
                <default>true</default>
                <label>Bottom</label>
            </value>
            <value>
                <fullName>Sides</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>