force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Display_Option__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Display_Option__c</fullName>
    <defaultValue>&apos;Squares&apos;</defaultValue>
    <description>Select display option for a question.</description>
    <inlineHelpText>Select display option for a question.</inlineHelpText>
    <label>Display Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Circles</fullName>
            </value>
            <value>
                <fullName>Squares</fullName>
                <default>true</default>
                <label>Squares</label>
            </value>
            <value>
                <fullName>Squares with Shadow</fullName>
            </value>
            <value>
                <fullName>Stars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>