force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Display_Order__c</fullName>
    <description>Order in which this question is displayed in a section. A typical value will be a three character text representing a number e.g. 005.</description>
    <inlineHelpText>Order in which this question is displayed in a section. A typical value will be a three character text representing a number e.g. 005.</inlineHelpText>
    <label>Display Order</label>
    <length>32</length>
    <type>Text</type>
</CustomField>