force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Display_Question_Text_in_Signature_Box__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Display_Question_Text_in_Signature_Box__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To display question text in signature box or not.</description>
    <inlineHelpText>Enable to display question text in the signature box.</inlineHelpText>
    <label>Display Question Text in Signature Box</label>
    <type>Checkbox</type>
</CustomField>