force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Do_Not_Allow_Change_Saved_Response__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Do_Not_Allow_Change_Saved_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, a Survey/Form participant will not be allowed to change their response once it is saved.</description>
    <inlineHelpText>When enabled, a Survey/Form participant will not be allowed to change their response once it is saved.</inlineHelpText>
    <label>Do Not Allow to Change Saved Response</label>
    <type>Checkbox</type>
</CustomField>