force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Do_Not_Allow_Duplicate_Responses__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Do_Not_Allow_Duplicate_Responses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to not allow duplicate responses when repeating the question response with repeat section.</description>
    <inlineHelpText>Enable to not allow duplicate responses when repeating the question response with repeat section.</inlineHelpText>
    <label>Do Not Allow Duplicate Responses</label>
    <type>Checkbox</type>
</CustomField>