force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Do_Not_Score__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Do_Not_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this question is skipped during score calculations.</description>
    <inlineHelpText>Enable to exclude the question from scoring.</inlineHelpText>
    <label>Do Not Score</label>
    <type>Checkbox</type>
</CustomField>