force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Document_Link__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Document_Link__c</fullName>
    <description>URL of the document to be downloaded, reviewed, attested and uploaded.</description>
    <inlineHelpText>Enter the URL of the document to be downloaded by participants.</inlineHelpText>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>