force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Document_Link_Caption__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Document_Link_Caption__c</fullName>
    <description>Caption for the document link.</description>
    <inlineHelpText>Enter the caption for the document download link.</inlineHelpText>
    <label>Document Link Caption</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>