force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Duplicate_Responses_Error__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Duplicate_Responses_Error__c</fullName>
    <description>Error message to display when the duplicate response is selected.</description>
    <inlineHelpText>Error message to display when the duplicate response is selected.</inlineHelpText>
    <label>Duplicate Responses Error</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>