force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Dynamic_Radio_Choices_Source__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Dynamic_Radio_Choices_Source__c</fullName>
    <description>Specifies the dynamic choices will be presented from a picklist field or using the records of an object meeting a matching criteria.</description>
    <inlineHelpText>Specifies the dynamic choices will be presented from a picklist field or using the records of an object meeting a matching criteria.</inlineHelpText>
    <label>Dynamic Radio Choices Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist Field</fullName>
            </value>
            <value>
                <fullName>Object Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>