force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Dynamic_Radio_Question_Expression_JSON__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Dynamic_Radio_Question_Expression_JSON__c</fullName>
    <description>In the case of &quot;Object Records&quot; source, the field stores expression JSON to query the selected object records to present as dynamic answer choices.</description>
    <inlineHelpText>In the case of &quot;Object Records&quot; source, the field stores expression JSON to query the selected object records to present as dynamic answer choices.</inlineHelpText>
    <label>Dynamic Radio Question Expression JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>