force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__End_Date__c</fullName>
    <inlineHelpText>Select End Date of Custom Date Range</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>