force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__False_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__False_Label__c</fullName>
    <description>A false label used for yes / no question false option</description>
    <inlineHelpText>Label to use for No, Dislike, Switch Off, False, or Checkbox Un-Checked</inlineHelpText>
    <label>False Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>