force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Field_Dependency_JSON__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Field_Dependency_JSON__c</fullName>
    <description>Stores dependent picklist field dependency as JSON string.</description>
    <inlineHelpText>Stores dependent picklist field dependency as JSON string.</inlineHelpText>
    <label>Field Dependency JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>