force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Grid_Question_Alphabetical_Row_Order__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Grid_Question_Alphabetical_Row_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to display sub questions in alphabetical order (not in the order entered). Random row order gets priority over this option.</description>
    <inlineHelpText>Enable to display sub questions in alphabetical order (not in the order entered). Random row order gets priority over this option.</inlineHelpText>
    <label>Grid Question - Alphabetical Row Order</label>
    <type>Checkbox</type>
</CustomField>