force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Help_Text__c</fullName>
    <description>Help text for this question.</description>
    <inlineHelpText>Enter help text to display with the question in the survey response interface.</inlineHelpText>
    <label>Help Text</label>
    <length>4096</length>
    <type>Html</type>
</CustomField>