force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Hidden__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to hide the question from a Survey/Form participants.</description>
    <inlineHelpText>Enable to hide the question from a Survey/Form participants.</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>