force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Hierarchical_Tree_JSON__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Hierarchical_Tree_JSON__c</fullName>
    <description>To store Hierarchical Tree JSON String.</description>
    <inlineHelpText>To render the Hierarchical Tree component, we use this JSON String.</inlineHelpText>
    <label>Hierarchical Tree JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>