force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Hierarchy_Tree_Design_Option__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Hierarchy_Tree_Design_Option__c</fullName>
    <description>Select to display answer choices either expanded or collapsed for Hierarchy Tree design option.</description>
    <inlineHelpText>Select to display answer choices either expanded or collapsed for Hierarchy Tree design option.</inlineHelpText>
    <label>Hierarchy Tree Design Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expanded</fullName>
                <default>true</default>
                <label>Expanded</label>
            </value>
            <value>
                <fullName>Collapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>