force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Indent_Level__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Indent_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How much indentation is to be applied in sub question.</description>
    <inlineHelpText>Indicates indentation level, mainly used for sub-questions in a grid question.</inlineHelpText>
    <label>Indent Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>