force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tracks the soft deletion status of questions in an open survey, enabling the deactivation or hiding of choices without permanently removing them.</description>
    <inlineHelpText>This field tracks the soft deletion status of questions in an open survey, enabling the deactivation or hiding of choices without permanently removing them.</inlineHelpText>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>