force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Label__c</fullName>
    <description>While authoring if option &quot;Allow Other&quot; is selected, provide option to change label for &quot;Other&quot;</description>
    <inlineHelpText>Label to use for the text box displayed when &quot;Other&quot; choice is selected.</inlineHelpText>
    <label>Other Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>