force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Main_Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Main_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference from sub questions to the main question of a grid like question.</description>
    <inlineHelpText>Reference from sub questions to the main question of a grid like question.</inlineHelpText>
    <label>Main Question</label>
    <referenceTo>ArdiraSurvey__Question__c</referenceTo>
    <relationshipLabel>Sub Questions</relationshipLabel>
    <relationshipName>Sub_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>