force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Mandatory__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, survey cannot be submitted without responding to this question.</description>
    <inlineHelpText>Enable to make the question mandatory for response submission.</inlineHelpText>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>