force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Max_Scale__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Max_Scale__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Maximum range value for a slider question.</description>
    <inlineHelpText>Maximum range value for a slider question.</inlineHelpText>
    <label>Max Scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>