force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Maximum_Number_of_Files_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Maximum_Number_of_Files_Allowed__c</fullName>
    <description>Limit the number of file that can be uploaded with the question.</description>
    <inlineHelpText>Limit the number of file that can be uploaded with the question.</inlineHelpText>
    <label>Maximum Number of Files Allowed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>