force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Min_Scale__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Min_Scale__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Minimum range value for a slider question.</description>
    <inlineHelpText>Minimum range value for a slider question.</inlineHelpText>
    <label>Min Scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>