force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Multiple_Choice_Allow_Multiple_Answers__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Multiple_Choice_Allow_Multiple_Answers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, allow multiple choices to be selected.</description>
    <inlineHelpText>Enable to allow multiple answer choices to be selected for the question response.</inlineHelpText>
    <label>Multiple Choice - Allow Multiple Answers</label>
    <type>Checkbox</type>
</CustomField>