force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Multiple_Choice_Allow_NA__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Multiple_Choice_Allow_NA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, allow N/A choice.</description>
    <inlineHelpText>Enable to allow N/A as one of the answer choices for the question response.</inlineHelpText>
    <label>Multiple Choice - Allow NA</label>
    <type>Checkbox</type>
</CustomField>