force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Multiple_Choice_Allow_Other__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Multiple_Choice_Allow_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, add &quot;other&quot; choice that allows text entry.</description>
    <inlineHelpText>Enable to add ‘Other’ as one of the answer choice for the question response. A text field will also be added along with this choice.</inlineHelpText>
    <label>Multiple Choice - Allow Other</label>
    <type>Checkbox</type>
</CustomField>