force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Multiple_Choice_Alphabetical_Choices__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Multiple_Choice_Alphabetical_Choices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to display answer choices in alphabetical order (not in the order entered). Random choices gets priority over this option.</description>
    <inlineHelpText>Enable to display answer choices in alphabetical order (not in the order entered). Random choices gets priority over this option.</inlineHelpText>
    <label>Multiple Choice - Alphabetical Choices</label>
    <type>Checkbox</type>
</CustomField>