force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Multiple_Choice_Max_Answer_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Multiple_Choice_Max_Answer_Count__c</fullName>
    <description>Maximum number of choices that can be selected for this question. Has to be equal or less than the number of available choices.</description>
    <inlineHelpText>Enter the maximum number of answer choices that can be selected for the question response.
The number must be equal to or less than the number of available answer choices.</inlineHelpText>
    <label>Multiple Choice - Max Answer Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>