force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Multiple_Choice_Min_Answer_Count__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Multiple_Choice_Min_Answer_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Minimum number of choices to be selected for this question.</description>
    <inlineHelpText>Enter the minimum number of answer choices that can be selected for the question response.</inlineHelpText>
    <label>Multiple Choice - Min Answer Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>