force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Number_Max_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Number_Max_Value_Number__c</fullName>
    <description>Maximum value that can be entered as a response to this question.</description>
    <inlineHelpText>Enter the maximum value that can be entered in response to the question.</inlineHelpText>
    <label>Number Question - Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>