force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Parent_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Parent_Lookup_Field__c</fullName>
    <description>Parent Lookup Field.</description>
    <label>Parent Lookup Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>