force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Passives__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Passives__c</fullName>
    <defaultValue>&quot;#FFFF00&quot;</defaultValue>
    <description>Color to be used for Passives.</description>
    <inlineHelpText>Select a color to use for the passives in the NPS question.</inlineHelpText>
    <label>Passives (7-8)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>