force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Placeholder_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Placeholder_Text__c</fullName>
    <description>Text that is displayed as a placeholder text for text based question. If question is choice based then default value will be &quot;Please select&quot;.</description>
    <inlineHelpText>Text that is displayed as a placeholder text for text based question. If question is choice based then default value will be &quot;Please select&quot;.</inlineHelpText>
    <label>Placeholder Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>