force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Promoters__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Promoters__c</fullName>
    <defaultValue>&quot;#008000&quot;</defaultValue>
    <description>Color to be used for Promoters.</description>
    <inlineHelpText>Select a color to use for the promoters in the NPS question.</inlineHelpText>
    <label>Promoters (9-10)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>