force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question__c</fullName>
    <description>Text of the question.</description>
    <inlineHelpText>Enter a question text and format it using the rich-text editor.</inlineHelpText>
    <label>Question</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>