force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Question_Plain_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question_Plain_Text__c</fullName>
    <description>Plain text of the question.</description>
    <inlineHelpText>Question Text, Plain Text. Converted automatically by the system using rich formatted question text.</inlineHelpText>
    <label>Question Plain Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>