force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Question_Short_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question_Short_Text__c</fullName>
    <description>First 220 characters of the question text. Used in list view, formula fields etc.</description>
    <inlineHelpText>First 220 characters of the question text. Used in list view, formula fields etc.</inlineHelpText>
    <label>Question Short Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>