force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Question_Variant__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question_Variant__c</fullName>
    <description>Use Inherit Survey Option to use survey level setting for the similar design option. Use Question-Inline to horizontally align the question and response fields. Use Question-Stacked to place the question above the response fields. For the best experience, the system may override certain layout options when a user takes a survey on a tablet or mobile device.</description>
    <inlineHelpText>Question-Inline - to horizontally align the question and response fields. 
Question-Stacked - to place the question above the response field.
For the best user experience, layout maybe automatically adjusted on a tablet or mobile device.</inlineHelpText>
    <label>Question Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question-Stacked</fullName>
            </value>
            <value>
                <fullName>Question-Inline</fullName>
            </value>
            <value>
                <fullName>Question-Inline (Right-aligned)</fullName>
            </value>
            <value>
                <fullName>Inherit from Survey Settings</fullName>
                <default>true</default>
                <label>Inherit from Survey Settings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>