force-app/main/default/objects/ArdiraSurvey__Question__c/fields/ArdiraSurvey__Rating_Rating_Range__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Rating_Rating_Range__c</fullName>
    <defaultValue>&quot;3&quot;</defaultValue>
    <description>Rating range to be used for this question.</description>
    <inlineHelpText>Enter the number of shapes to be displayed as a rating range to a participant in the survey response interface.</inlineHelpText>
    <label>Rating Question - Rating Range</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>